<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/sunmi_test"
        android:textColor="@color/main_title_txt"/>

    <View style="@style/line_gray"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_open_vice_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:gravity="center"
                android:text="副屏2"/>

            <Button
                android:id="@+id/btn_show_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:gravity="center"
                android:text="副屏1"/>

            <Button
                android:id="@+id/btn_play_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:gravity="center"
                android:text="副屏3"/>

            <Button
                android:id="@+id/btn_play_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:gravity="center"
                android:text="副屏4"/>

            <Button
                android:id="@+id/btn_show_imgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:gravity="center"
                android:text="@string/btn_show_imgs"/>

            <Button
                android:id="@+id/btn_show_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:gravity="center"
                android:text="@string/send_text"/>

            <Button
                android:id="@+id/btn_clean_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:text="@string/clean_vice_cache"/>

            <Button
                android:id="@+id/btn_getfilecachesize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:text="@string/get_vice_cahceSize"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
