<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="280dp"
        android:background="@drawable/pay_dialog_bg"
        android:orientation="vertical">
        <!--<ImageView-->
        <!--android:id="@+id/iv_logo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:src="@drawable/apple_dialog" />-->

        <TextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:alpha="0.5"
            android:text="@string/tips_delete"
            android:textColor="#000000"
            android:textSize="24sp" />


        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.66dp"
            android:layout_below="@id/tv_des"
            android:layout_marginTop="13.33dp"
            android:background="#CEDADD" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/line1"
            android:background="@drawable/pay_dialog_button_bg"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:alpha="0.6"
                android:background="@null"
                android:text="@string/tips_cancel"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="0.66dp"
                android:layout_height="64dp"
                android:background="#CEDADD" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:alpha="0.6"
                android:background="@null"
                android:text="@string/fruit_sure"
                android:textColor="#FC5346"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
